assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Cantarell&family=Fjalla+One&display=swap');

body {
    margin: 0;
    padding: 0;
    font-family: 'Cantarell', sans-serif;
    background-color: rgba(247, 244, 235, 1);
}

h1,
h2,
h3,
h4 {
    margin: 0;
    font-family: 'Fjalla One', sans-serif;
}

a {
    font-family: 'Fjalla One', sans-serif
}

/* START hero, navbar, text, responsive */
/* HERO */
.hero {
    height: 30rem;
    max-width: 1200px;
    margin: auto;
    background: url(../images/hero-bg1.jpg) no-repeat center center;
    overflow: hidden;
}

.logo {
    float: left;
    margin-left: 1rem;
}

.logo a {
    display: flex;
    align-items: center;
    text-decoration: none;
}

.logo h1 {
    font-size: 5rem;
    color: rgba(35, 56, 91, 1);
    text-transform: uppercase;
}

.logo img {
    width: 5rem;
    height: 5rem;
}

/* NAVBAR */

.navbar {
    float: right;
    margin-top: 1rem;
    margin-right: 1rem;
}

.navbar a {
    padding: 0.5rem 1rem;
    background-color: rgba(35, 56, 91, 1);
    text-decoration: none;
    color: rgba(247, 244, 235, 1);
    text-transform: uppercase;
    margin: 0 0.5rem;
}

.navbar a:hover {
    color: rgba(35, 56, 91, 1);
    background-color: rgba(247, 244, 235, 1);
    transition: 0.2s;
}

.active {
    border-bottom: 5px solid coral;
}

.join-btn {
    float: right;
    padding: 1rem 2rem;
    background-color: coral;
    text-decoration: none;
    text-transform: uppercase;
    color: rgba(35, 56, 91, 1);
}

.join-btn:hover {
    background-color: rgba(35, 56, 91, 1);
    color: coral;
    transition: 0.2s;
}

/* HERO TEXT */

.hero-text {
    position: absolute;
    top: 10rem;
    margin-left: 1rem;
}

.hero-text h2 {
    font-size: 3.5rem;
    color: rgba(200, 211, 217, 1);
}

.hero-text h3 {
    font-size: 2rem;
    color: rgba(95, 114, 140, 1);
}

/* RESPONSIVE HERO 950 */

@media screen and (max-width: 950px) {
    .logo h1 {
        font-size: 8vw;
    }

    .navbar {
        margin: 0;
    }

    .navbar a {
        display: block;
        text-align: center;
    }

    .join {
        display: flex;
        justify-content: flex-end;
        margin-right: 0.5rem;
    }

    .join-btn {
        display: block;
        float: none;
        width: fit-content;
    }

    .hero-text h2 {
        font-size: 6vw;
    }
    .hero-text h3 {
        font-size: 4vw;
    }
}

/* RESPONSIVE HERO 600 */

@media screen and (max-width: 600px) {

    .logo h1 {
        font-size: 10vw;
        margin-left: 0;
        padding: 0;
    }

    .logo img {
        display: none;
    }

    .navbar {
        width: 100%;
        margin: 0;
        text-align: center;
    }

    .navbar a {
        display: block;
        margin: 0;
    }

    .join {
        margin: 0;

    }
    .hero-text{
        top: 12rem;
    }
        .hero-text h2 {
        font-size: 8vw;
    }
    .hero-text h3 {
        font-size: 6vw;
    }
}

/* END hero, navbar, text, responsive */
/* START reasons */

.reasons-section{
    overflow: hidden;
    text-align: center;
}

.reasons-section h2, h3 {
    text-transform: uppercase;
}

.reasons-section h2 {
    margin: 1rem;
}

.reasons-section h4 {
    text-transform: capitalize;
}

.cards{
    background-color: white;
    display: grid;
    gap: 1vw;
    grid-template-columns: repeat(3, 1fr);
    max-width: 1200px;
    margin: 0 auto;
}

.card{
    text-align: center;
    padding: 1rem;
}

/* RESPONSIVE reasons */

@media screen and (max-width: 600px){
    .cards{
        grid-template-columns: repeat(1, 1fr);
    }    
}

/* END reasons */
/* START testimonials */

.testimonials-section{
    overflow: hidden;
    text-align: center;
}

.testimonials-section h2{
    margin: 1rem 0;
}

.testimonials-section h3{
    color: coral;
}   

.container{
    max-width: 1200px;
    margin: 0 auto;
}

.box{
    display: flex;
    align-items: baseline;
    background-color: rgb(200, 211, 217);
    border-radius: 100% 0 100% 0;
    margin-bottom: 1rem;
}

.t-image{
    margin-left: 10vw;
}

.t-image img{
    width: 15rem;
    border-radius: 50%;
}

.t-text{
    background-color: white;
    width: 10rem;
    padding: 1rem 2rem;
    border-radius: 0 50% 50% 50%;
    text-align: center;
}

/* REVERSED */

.container > div:nth-child(2){
    display: flex;
    flex-direction: row-reverse;
    justify-content: flex-start;
    border-radius: 0 100% 0 100%;
}

.container>div:nth-child(2) > .t-image{
    margin-right: 10vw;
    margin-left: 0;
}

.container>div:nth-child(2)>.t-text {
    border-radius: 50% 0 50% 50%;
}

/* RESPONSIVE testimonials */

@media screen and (max-width: 500px) {
    .box {
        display: block;
        width: 100%;
        padding: 0;
    }

    .t-image {
        display: flex;
        justify-content: center;
        margin-left: 0;
    }

    .t-text {
        display: block;
        border-radius: 0;
        padding: 0.5rem;
        width: 100%;
    }

    .container>div:nth-child(2) {
        display: block;
        width: 100%;
    }

    .container>div:nth-child(2)>.t-text {
        display: block;
        border-radius: 0;
        padding: 0.5rem;
    }

    .container>div:nth-child(2)>.t-image {
        display: flex;
        flex-direction: row-reverse;
        margin: 0;
        justify-content: center;
    }

    .t-image img {
        max-width: 150px;
    }
}

/* END testimonials */
/* START timeline */

.timeline-section{
    text-align: center;
}

.tl-container{
    background-color: white;
    display: grid;
    grid-template-columns: repeat(9, 1fr);
    align-items: center;
    max-width: 1200px;
    margin: 1rem auto;
    padding: 1rem 1rem 5rem;
}

.time{
    background-color: rgba(34, 49, 77, 1);
    color: white;
    border-radius: 50%;
    height: 1.4rem;
    width: 1.4rem;
    align-self: center;
    justify-self: center;
}

.time p{
    color: rgba(34, 49, 77, 1);
    background-color: rgba(247, 244, 235, 1);
    width: fit-content;
    height: fit-content;
    padding: 1rem;
    border-radius: 0 2rem 2rem 2rem;
    font-weight: bolder;
}

.line{
    background-color: rgba(34, 49, 77, 1);
    height: 0.1rem;
    align-self: center;
}

.tl-end{
    background-color: coral;
    border-radius: 50%;
    height: 7rem;
    width: 7rem;
    justify-self: center;
    padding: 1rem;
    margin: 1rem;
}
.tl-end h3{
    font-weight: bolder;
    color: white;
    margin: auto;
    font-size: 2rem;
    padding: 0;
    margin: 0;
        
}

.tl-end p {
    color: rgba(34, 49, 77, 1);
    position: relative;
    z-index: 2;
    font-weight: bolder;
    margin-top: 0;
}

/* RESPONSIVE timeline */

@media screen and (max-width: 600px) {
    
    .tl-container {
        background-color: white;
        display: grid;
        grid-template-columns: repeat(1 ,1fr);
        align-items: center;
        margin: 1rem auto;
        padding: 1rem 1rem 5rem;
    }

    .time p {
        position: relative;
        bottom: 1.5rem;
        color: rgba(34, 49, 77, 1);
        background-color: rgba(247, 244, 235, 1);
        width: fit-content;
        height: auto;
        padding: 1rem;
        border-radius: 0 2rem 2rem 2rem;
    }
    
    .line {
        background-color: rgba(34, 49, 77, 1);
        width: 0.1rem;
        height: 4rem;
        align-self: center;
        justify-self: center;
        margin: 1rem;
    }


    .tl-container > div:nth-child(3) > p, :nth-child(7) > p{
        color: red;
        position: relative;
        right: 4.5rem;
        border-radius: 2rem 0rem 2rem 2rem;
        align-self: center;
    }
    .tl-container > div:nth-child(1) > p, :nth-child(5) > p{
        position: relative;
        left: 2rem;
        border-radius: 0rem 2rem 2rem 2rem;
    
    }

}

